# netsuite-takeoff-integration

./: .gitignore  LICENSE  README.md  config.ifp  controller.bat  pyproject.toml  requirements.txt  setup.bat
MOVE THESE FIRST/: readme.txt
src/: config.spec  consts.py  main.py
src/data/: consts.csv  settings.csv
src/data/dropdowns/: Classes.csv  Customers.csv  Departments.csv  Items.csv  ProjectTemplates.csv  ProjectTypes.csv  ProposalSalesReps.csv
src/interface/: app.py  dropdowns.py  utils.py
src/middleware/: elements.py  middleware.py  utils.py
src/project/: file_gen.py
src/sharepoint/: dir_handler.py
src/utility/: csv_handler.py  elem_handler.py  excel_handler.py  list_handler.py
