[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NetSuite Controller"
version = "1.0.1"
authors = [
  { name="Adil Zafar Khan", email="adil.khan@primeeng.ca" },
]
description = "A GUI tool that automates the process of creating proposals in NetSuite and adding the corresponding project directories to sharepoint."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""